# Warigami

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  README.md  warigami.exe - Shortcut.lnk
apps/demo/: CMakeLists.txt  board_path_movement_system.hpp  box_move_system.hpp  disco_light_system.hpp  fly_cam_system.hpp  health_damage_system.hpp  main.cpp
apps/demo/assets/prototypes/: disco.json  disco_floor.json  gameboard.json  physics.json
apps/demo/assets/scenes/: scene.json
apps/demo/components/: board_loader.cpp  board_path_movement.cpp  board_path_movement.hpp  board_path_movement_loader.cpp  board_square.hpp  board_square_loader.cpp  card.hpp  card_loader.cpp  component_bits.hpp  dice.hpp  dice_loader.cpp  disco_light.h  game_piece.hpp  game_piece_loader.cpp  hit_points.hpp  player.hpp  player_loader.cpp
apps/demo/util/: boardgen.cpp  boardgen.hpp
apps/game/: CMakeLists.txt  game.cpp  sample_mgui.hpp
apps/game/assets/scenes/: scene.json
apps/game/assets/shaders/: default.vert
apps/game/components/include/: game_piece.hpp  game_piece_loader.hpp
apps/game/components/src/: game_piece.cpp  game_piece_loader.cpp
apps/prototype_one/: AI_system.hpp  CMakeLists.txt  add_combats_to_resolver.hpp  animator_system.hpp  board_update_system.hpp  button_tooltip_system.cpp  button_tooltip_system.hpp  cheat_handler.hpp  combat.cpp  combat.hpp  countdown_system.hpp  deck_selection_controller.cpp  deck_selection_controller.hpp  deck_selection_system.cpp  deck_selection_system.hpp  deck_type.hpp  deck_ui_controller.cpp  deck_ui_controller.hpp  deck_ui_system.hpp  endgame_screen_system.hpp  endgame_system.hpp  energy_ball_system.cpp  energy_ball_system.hpp  energy_flower_creation_system.hpp  energy_meter_system.hpp  flash_step_system.hpp  fly_cam_system.hpp  freetype_test.hpp  game_events.hpp  game_start_system.hpp  health_meter_system.hpp  health_orb_color_system.hpp  health_regenration_system.hpp  health_regeration_system.hpp  interpolation_system.hpp  letterbox.hpp  logo_system.cpp  logo_system.hpp  main.cpp  main_menu_controller.cpp  (+17 more)
apps/prototype_one/assets/meshes/: egg.glb
apps/prototype_one/assets/prototypes/: archer.json  backdrop.json  basic_unit.json  boardsquare.json  boardsquare2.json  card.json  card_archer.json  card_basic_fast.json  card_basic_melee.json  card_basic_range.json  card_dragon.json  card_egg.json  card_eraser.json  card_erathor.json  card_goliath.json  card_heavy_fast_soldier.json  card_heavy_range_soldier.json  card_heavy_tank_soldier.json  card_knight.json  card_light_fast_soldier.json  card_light_tank_soldier.json  (+76 more)
apps/prototype_one/components/: board.hpp  board_loader.cpp  board_loader.hpp  board_square.hpp  board_square_loader.cpp  button_tooltip.cpp  button_tooltip.hpp  button_tooltip_loader.hpp  capture.cpp  capture.hpp  card.hpp  card_enum.hpp  component_bits.hpp  countdown.cpp  countdown.hpp  countdown_loader.hpp  deck_cursor.cpp  deck_cursor.hpp  deck_cursor_loader.hpp  deck_option.cpp  deck_option.hpp  deck_option_loader.hpp  deck_selection.cpp  deck_selection.hpp  deck_selection_loader.hpp  deck_ui.hpp  deck_ui_loader.hpp  dice_loader.cpp  energy_ball.cpp  energy_ball.hpp  energy_meter.cpp  energy_meter.hpp  game_piece.hpp  game_piece_loader.cpp  hit_points.cpp  hit_points.hpp  logo.cpp  logo.hpp  main_menu.cpp  main_menu.hpp  (+26 more)
apps/prototype_one/game_util/: boardgen.cpp  card_spawner.hpp  player_specifics.hpp
apps/prototype_one/param_models/: anim_params.hpp
apps/prototype_one/util/: boardgen.cpp
src/: CMakeLists.txt
src/asset/: asset_manager.cpp  json_cache.cpp  model_loader.cpp  resource_id.cpp  rigged_mesh.cpp  scene.cpp  scene_entity.cpp  scene_hydrater.cpp  scene_tracker.cpp
src/audio/: audio_emitter.cpp  audio_listener.cpp  audio_system.cpp  music_player.cpp
src/collisions/: aabb_collider_loader.cpp  collider.cpp  collider_loaders.cpp  collision_manager.cpp  rigid_body.cpp  rigid_body_loader.cpp  sphere_collider_loader.cpp
src/core/: cursor_state.cpp  frame_limiter.cpp  frame_timer.cpp  framerate.cpp  game_input_manager.cpp  glfw_context.cpp  input_event_manager.cpp  input_manager.cpp  startup_config.cpp  system_info.cpp
src/ecs/: archetype_pool.cpp  archetype_pools.cpp  chunk_component_accessor.cpp  component_meta.cpp  entity.cpp  query_cache.cpp  state.cpp  systems.cpp  world.cpp
src/engine-ui/: abc.cpp  developer_console.cpp  entities_view.cpp  fps_display.cpp  imgui_overlay.cpp
src/engine-ui/views/: console.cpp
src/event/: event_manager.cpp
src/memory/: alignment.cpp  pool_allocator.cpp  pool_memory_block.cpp
src/physics/: physics_update.cpp
src/platform/: rumble.cpp  sleep.cpp  user_data_paths.cpp
src/rendering/: animator.cpp  asset_cache.cpp  camera.cpp  camera_updater.cpp  debug_view.cpp  freetype_system.cpp  light_directional.cpp  light_point.cpp  loader_camera.cpp  loader_light_directional.cpp  loader_light_point.cpp  loader_model.cpp  loader_renderable_text.cpp  loader_rigged_model.cpp  render_loader.cpp  render_pass.cpp  renderable_mesh_rigged.cpp  renderable_mesh_static.cpp  renderable_model_static.cpp  renderable_text.cpp  renderer.cpp  skeleton_animation.cpp  skeleton_node.cpp
src/rendering/shaders/: animated.frag  animated.vert  blended.frag  cubemap.frag  cubemap.vert  debug.frag  debug.vert  default.frag  freetype.frag  freetype.vert  highlight.frag  highlight.vert
src/transforms/: transform.cpp  transform_loader.cpp  transformer.cpp
test/: CMakeLists.txt  ecs_tests.cpp
test/asset/: components.h  main.cpp  sample_loader.hpp  test_actual_loaders.cpp  test_actual_loaders.hpp  test_model_loader.hpp
test/audio/: main.cpp
test/audio/assets/: scene.json
test/collisions/: collisions_test.cpp
test/ecs/: archetype_pool_tests.h  components.h  ecs_tests.cpp  entity_state_tests.h  entity_world_tests.h  pool_allocator_tests.h  typed_pool_allocator_tests.h
test/event/: event_tests.cpp
test/lua/: test.c
test/render_asset/: main.cpp
test/rendering/: test.cpp
test/skeletal/: fly_cam_system.hpp  skeletal.cpp
test/skeletal/assets/: bendything.gltf  scene.json
(+337 files in other folders)
